manifests/notea/notea.yaml
apiVersion: v1
kind: Service
metadata:
  name: notea
  namespace: notea
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    name: web
  selector:
    app: notea
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notea
  namespace: notea
spec:
  selector:
    matchLabels:
      app: notea
  replicas: 1
  template:
    metadata:
      labels:
        app: notea
    spec:
      containers:
      - args:
        - --cookie-secure=false
        - --provider=oidc
        - --provider-display-name=Auth0
        - --upstream=http://localhost:3000
        - --http-address=$(HOST_IP):8000
        - --redirect-url=https://notea.cluster.fun/oauth2/callback
        - --email-domain=marcusnoble.co.uk
        - --pass-basic-auth=false
        - --pass-access-token=false
        - --oidc-issuer-url=https://marcusnoble.eu.auth0.com/
        - --cookie-secret=KDGD6rrK6cBmryyZ4wcJ9xAUNW9AQN
        image: quay.io/oauth2-proxy/oauth2-proxy:v5.1.1
        name: oauth-proxy
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            memory: 125Mi
          requests:
            memory: 125Mi
      - name: notea
        image: cinwell/notea:0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: web
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: notea
  namespace: notea
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - notea.cluster.fun
    secretName: notea-ingress
  rules:
  - host: notea.cluster.fun
    http:
      paths:
      - path: /
        backend:
          serviceName: notea
          servicePort: 80
